...
    var clickedBreed by remember { mutableStateOf<CatBreed?>(null) }

    LaunchedEffect(Unit) {
        events.collect { event ->
            when (event) {
                FavouritesEvent.FavouriteRemoved ->
                    snackbarHostState.showSnackbar("🤨🤨🤨⁉️")

                is FavouritesEvent.ShowError ->
                    snackbarHostState.showSnackbar(event.message)
            }
        }
    }
...
